<resources>
    <string name="app_name">TipCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount">Bill Amount:</string>
    <string name="percent_label">Percent</string>
    <string name="tip_label">Tip</string>
    <string name="total_label">Total</string>
    <string name="percent_text_view">15%</string>
    <string name="tip_text_view">0.00</string>
    <string name="total_text_view">0.00</string>
    <string name="percent_up">+</string>
    <string name="percent_down">-</string>
    <string name="reset">reset</string>
</resources>
