<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TipCalculatorActivity"
    android:id="@+id/Helen"
    android:background="@color/material_deep_teal_200">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_amount"
        android:id="@+id/billAmountLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent_label"
        android:id="@+id/percentLabel"
        android:layout_below="@+id/billAmountLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_label"
        android:id="@+id/tipLabel"
        android:layout_below="@+id/percentLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_label"
        android:id="@+id/totalLabel"
        android:layout_below="@+id/tipLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/billAmountEditText"
        android:layout_alignTop="@+id/billAmountLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent_text_view"
        android:id="@+id/percentTextView"
        android:layout_alignTop="@+id/percentLabel"
        android:layout_alignLeft="@+id/billAmountEditText"
        android:layout_alignStart="@+id/billAmountEditText"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_text_view"
        android:id="@+id/tipTextView"
        android:layout_alignTop="@+id/tipLabel"
        android:layout_alignLeft="@+id/percentTextView"
        android:layout_alignStart="@+id/percentTextView"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_text_view"
        android:id="@+id/totalTextView"
        android:layout_alignTop="@+id/totalLabel"
        android:layout_alignLeft="@+id/tipTextView"
        android:layout_alignStart="@+id/tipTextView"
        android:textSize="20sp" />

    <Button
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/percent_up"
        android:id="@+id/percentUpButton"
        android:layout_below="@+id/billAmountEditText"
        android:layout_toRightOf="@+id/tipTextView"
        android:layout_toEndOf="@+id/tipTextView"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" />

    <Button
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/percent_down"
        android:id="@+id/percentDownButton"
        android:layout_below="@+id/billAmountEditText"
        android:layout_toRightOf="@+id/percentUpButton"
        android:layout_toEndOf="@+id/percentUpButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/resetButton"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/billAmountLabel"
        android:layout_toEndOf="@+id/billAmountLabel"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
